<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CBD0D6"
    android:textAlignment="center"
    tools:context=".AddMedicine">

    <TextView
        android:id="@+id/medicine"
        android:layout_width="255dp"
        android:layout_height="44dp"
        android:fontFamily="monospace"
        android:text="@string/new_medicine"
        android:textAlignment="center"
        android:textColor="#08006A"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <FrameLayout
        android:id="@+id/frame1"
        android:layout_width="423dp"
        android:layout_height="82dp"
        android:background="#7E8B96"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="147dp"
            android:layout_height="66dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:fontFamily="monospace"
            android:fontStyle="normal"
            android:text="@string/my_medications"
            android:textAlignment="center"
            android:textColor="#08006A"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="141dp"
            android:layout_height="66dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:fontFamily="monospace"
            android:fontStyle="normal"
            android:text="@string/health_condition"
            android:textAlignment="center"
            android:textColor="#08006A"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/button2"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="8dp"
            android:background="#00000000"
            android:backgroundTint="#916D6D"
            android:contentDescription="@string/app_name"
            android:fontFamily="monospace"
            android:fontStyle="normal"
            android:padding="100dp"
            android:textColor="#08006A"
            android:textStyle="bold"
            app:srcCompat="@drawable/ic_add" />

    </FrameLayout>

    <Button
        android:id="@+id/okbutton"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#08006A"
        android:fontFamily="monospace"
        android:text="@string/ok"
        android:textColorHighlight="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/frame1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginStart="180dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#64F3E5E5"
        android:fontFamily="monospace"
        android:text="@string/Cancel"
        android:textColor="#070606"
        app:layout_constraintBottom_toTopOf="@id/frame1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/med_name"
        android:layout_width="181dp"
        android:layout_height="35dp"
        android:text="@string/medicine_name"
        android:textColor="#08006A"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/okbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <TextView
        android:id="@+id/med_days"
        android:layout_width="178dp"
        android:layout_height="29dp"
        android:layout_marginBottom="372dp"
        android:text="@string/medicine_days"
        android:textColor="#08006A"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/frame1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/med_time"
        android:layout_width="176dp"
        android:layout_height="31dp"
        android:layout_marginBottom="252dp"
        android:text="@string/time_to_remind"
        android:textColor="#08006A"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/frame1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="244dp"
        android:layout_height="43dp"
        android:layout_marginBottom="440dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/frame1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no"
        android:hint="@string/enter_medicine"/>

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="244dp"
        android:layout_height="43dp"
        android:layout_marginBottom="308dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/medicine_days"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/frame1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="244dp"
        android:layout_height="43dp"
        android:layout_marginBottom="192dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/time_to_remind"
        android:importantForAutofill="no"
        android:inputType="time"
        app:layout_constraintBottom_toTopOf="@+id/frame1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="46dp"
        android:layout_height="45dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="308dp"
        android:background="#BBDADD"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/frame1"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />


</androidx.constraintlayout.widget.ConstraintLayout>