<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CBD0D6"
    android:textAlignment="center"
    tools:context=".HealthCondition">

    <TextView
        android:id="@+id/health_condition"
        android:layout_width="343dp"
        android:layout_height="71dp"
        android:fontFamily="monospace"
        android:text="@string/health_condition"
        android:textAlignment="center"
        android:textColor="#08006A"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <FrameLayout
        android:id="@+id/frame1"
        android:layout_width="423dp"
        android:layout_height="82dp"
        android:background="#7E8B96"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="147dp"
            android:layout_height="66dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:fontFamily="monospace"
            android:fontStyle="normal"
            android:text="@string/my_medications"
            android:textAlignment="center"
            android:textColor="#08006A"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="141dp"
            android:layout_height="66dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:fontFamily="monospace"
            android:fontStyle="normal"
            android:text="@string/health_condition"
            android:textAlignment="center"
            android:textColor="#08006A"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/button2"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="8dp"
            android:background="#00000000"
            android:backgroundTint="#916D6D"
            android:contentDescription="@string/app_name"
            android:fontFamily="monospace"
            android:fontStyle="normal"
            android:padding="100dp"
            android:textColor="#08006A"
            android:textStyle="bold"
            app:srcCompat="@drawable/ic_add" />

    </FrameLayout>

    <TextView
        android:id="@+id/sleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="416dp"
        android:text="@string/how_did_you_sleep"
        android:textColor="#08006A"
        android:textSize="22sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/frame1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="239dp"
        android:layout_height="48dp"
        android:layout_marginBottom="348dp"
        app:layout_constraintBottom_toTopOf="@+id/frame1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/pain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_feel_pain"
        android:textColor="#08006A"
        android:textSize="22sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/frame1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        app:layout_constraintVertical_bias="0.119" />

    <RadioButton
        android:id="@+id/radioYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/frame1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pain"
        app:layout_constraintVertical_bias="0.137" />

    <RadioButton
        android:id="@+id/radioNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/frame1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.713"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pain"
        app:layout_constraintVertical_bias="0.137" />

    <Button
        android:id="@+id/savebutton"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="#08006A"
        android:fontFamily="monospace"
        android:text="@string/save"
        android:textColorHighlight="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/frame1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginStart="180dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="#64F3E5E5"
        android:fontFamily="monospace"
        android:text="@string/Cancel"
        android:textColor="#070606"
        app:layout_constraintBottom_toTopOf="@id/frame1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextDate4"
        android:layout_width="177dp"
        android:layout_height="32dp"
        android:layout_marginBottom="492dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="date"
        android:autofillHints="@string/medicine_days"
        app:layout_constraintBottom_toTopOf="@+id/frame1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/buttonCalendar"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:layout_marginBottom="484dp"
        android:background="#BBDADD"
        android:contentDescription="@string/todo"
        android:src="@android:drawable/ic_menu_my_calendar"
        app:layout_constraintBottom_toTopOf="@+id/frame1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>