<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/medications3"
    android:textAlignment="center"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/helloText"
        android:layout_width="334dp"
        android:layout_height="99dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:fontFamily="monospace"
        android:fontStyle="normal"
        android:text="@string/be_in_control_of_your_meds"
        android:textAlignment="center"
        android:textColor="#08006A"
        android:textDirection="firstStrong"
        android:textIsSelectable="false"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:textLocale="centre" />

    <TextView
        android:id="@+id/helloText2"
        android:layout_width="268dp"
        android:layout_height="128dp"
        android:layout_marginStart="47dp"
        android:fontFamily="monospace"
        android:fontStyle="normal"
        android:text="@string/scan_your_prescription_add_to_your_medications_and_you_will_never_forget_to_take_them"
        android:textAlignment="center"
        android:textColor="#184C9C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helloText"
        app:layout_constraintVertical_bias="0.077" />

    <FrameLayout
        android:id="@+id/frame1"
        android:layout_width="423dp"
        android:layout_height="82dp"
        android:background="#7E8B96"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="147dp"
            android:layout_height="66dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:fontFamily="monospace"
            android:fontStyle="normal"
            android:text="@string/my_medications"
            android:textAlignment="center"
            android:textColor="#08006A"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/button3"
            android:layout_width="141dp"
            android:layout_height="66dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:fontFamily="monospace"
            android:fontStyle="normal"
            android:text="@string/health_condition"
            android:textAlignment="center"
            android:textColor="#08006A"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageButton
            android:id="@+id/button2"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="8dp"
            android:background="#00000000"
            android:backgroundTint="#916D6D"
            android:contentDescription="@string/app_name"
            android:fontFamily="monospace"
            android:fontStyle="normal"
            android:padding="100dp"
            android:textColor="#08006A"
            android:textStyle="bold"
            app:srcCompat="@drawable/ic_add" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>